tdf#157288: "Primary key" missing when right click a field during table edition

Revert partly 0c2b2c9babfd781e0d9d68bb2a14a045b0c6ec4c
"Use getXWeak in stoc"

Change-Id: I0344510dee33c8740937354d64c0e60115606d26
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/157178
Tested-by: Jenkins
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>